<?xml version="1.0"?>
<package format="2">
  <name>cdpr_controllers</name>
  <version>0.0.0</version>
  <description>Controllers for CDPR</description>

  <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier Kermorgant</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cdpr</depend>
  <depend>roscpp</depend>
  <depend>log2plot</depend>

</package>
