<?xml version="1.0"?>
<package>
  <name>rqt_cdpr</name>
  <version>0.0.0</version>
  <description>The rqt_cdpr package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="olivier@todo.todo">olivier</maintainer>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy_rqt</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>


  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
