<?xml version="1.0"?>
<package format="2">
  <name>cdpr3</name>
  <version>0.0.0</version>
  <description>The cdpr package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="olivier@todo.todo">olivier</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>
  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visp</depend>
   <depend>eigen</depend>  
 <depend>qpOASES</depend>   
 <depend>cgal</depend>  
   <depend>rospy</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>
 <depend>message_generation</depend>
  <depend>message_runtime</depend>
<depend>std_msgs</depend>
<depend>SOLVEQP</depend>
  <!-- The export tag contains other, unspecified, tags -->

</package>
